--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "eb146851",
+   "id": "35d868fc",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "d4ba3d19",
+   "id": "451a05ed",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "4c3bbc37",
+   "id": "7f0f6d36",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "7bcc04aa",
+   "id": "aa362a38",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "29fce6bb",
+   "id": "05900339",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "0c0fdc60",
+   "id": "453dd7ee",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "5e62c38c",
+   "id": "a0ac4e0e",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "15efa827",
+   "id": "7f0c339d",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "e830be02",
+   "id": "5428eabb",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "63dbac6e",
+   "id": "518101f9",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "5571c03a",
+   "id": "27daf071",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "b813729f",
+   "id": "76e5ae83",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "0ef0d8e9",
+   "id": "c978f9da",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "8df18363",
+   "id": "983fd58d",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "7cae5fbe",
+   "id": "072759f7",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "c7773710",
+   "id": "ca6072e6",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "d9694474",
+   "id": "d95413ec",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "cb77b2f5",
+   "id": "ddfe7c17",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "a481810a",
+   "id": "a38ac162",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "7aae30ce",
+   "id": "57821e2e",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "1ab423ce",
+   "id": "1e56a8f2",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "c69b35f4",
+   "id": "e4614514",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "f6dad1a5",
+   "id": "9d3ef3c3",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "5d1e8130",
+   "id": "520e122e",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "17889a91",
+   "id": "6f72e83e",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "c024dbbb",
+   "id": "22b7b804",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "14e5b0a8",
+   "id": "b446b37c",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "d2ea04dc",
+   "id": "049874cb",
    "metadata": {},
    "outputs": [
     {
@@ -933,8 +933,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "26c14490",
+   "execution_count": 163,
+   "id": "4748732a",
    "metadata": {},
    "outputs": [
     {
@@ -942,8 +942,7 @@
      "output_type": "stream",
      "text": [
       "Enter num1: 123\n",
-      "Enter num2: 4\n",
-      "123 is not numeric\n"
+      "Enter num2: 4\n"
      ]
     }
    ],
@@ -951,15 +950,14 @@
     "num1 = input('Enter num1: ').strip()\n",
     "num2 = input('Enter num2: ').strip()\n",
     "if num1 == int(num1) and num2 == int(num2):\n",
-    "    print(f'{num}int(num1) + int(num2)')\n",
-    "else:\n",
-    "    print(f'{num1} is not numeric')"
+    "    print(f'{num} + {num2} = {int(num1) + int(num2)}')\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e10b08b",
+   "id": "e91ad90e",
    "metadata": {},
    "outputs": [],
    "source": []
