--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "870eed99",
+   "id": "e6f985a9",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "948f6741",
+   "id": "68de77ab",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "64b2ad0b",
+   "id": "d225af45",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "07729a31",
+   "id": "343fc44d",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "6f5b91ff",
+   "id": "dbce74e1",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "6f93da71",
+   "id": "33c19586",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "702a8841",
+   "id": "0c85ebaa",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "46c5474a",
+   "id": "426f9c4c",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "fd0edda8",
+   "id": "dc4f83b3",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "4235ad2a",
+   "id": "31447e3a",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "8316a9bf",
+   "id": "71cd1a0d",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "31bdf183",
+   "id": "fedd47fc",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "98a5ce8c",
+   "id": "6023e38b",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "fa1c7455",
+   "id": "f908c4df",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "65d00dd4",
+   "id": "57af2121",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "3eedb51d",
+   "id": "a0c93272",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "1b0a8d26",
+   "id": "4d445781",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "0dc5c184",
+   "id": "e751152c",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "6cd77b1a",
+   "id": "85c2de09",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "b355286b",
+   "id": "521ea2ea",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "2b989431",
+   "id": "c4c2fe5c",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "2df5368d",
+   "id": "78d6e522",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "2e08565d",
+   "id": "4187c0d2",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "945d4758",
+   "id": "99ebe364",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "70b4aebc",
+   "id": "0fdbdad3",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "296ae137",
+   "id": "8f2dc1ac",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "14ccf750",
+   "id": "6f45c68e",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "de59cf70",
+   "id": "f73a9c12",
    "metadata": {},
    "outputs": [
     {
@@ -933,33 +933,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "f4349a9e",
+   "execution_count": null,
+   "id": "2c845e92",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter num1: 123\n",
-      "Enter num2: 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num1 = input('Enter num1: ').strip()\n",
     "num2 = input('Enter num2: ').strip()\n",
     "if num1 == int(num1) and num2 == int(num2):\n",
     "    print(f'{num} + {num2} = {int(num1) + int(num2)}')\n",
-    "if not num1.isdigit():\n",
+    "elif not num1.isdigit():\n",
     "    print(f'{num1} is not numeric')\n",
-    "else\n"
+    "else:\n",
+    "    print(f'{num2} is not numeric')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca4655b3",
+   "id": "55f9900e",
    "metadata": {},
    "outputs": [],
    "source": []
