--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "777f1a80",
+   "id": "f8e25d0e",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "cfaa59cc",
+   "id": "46791109",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "9b31ef80",
+   "id": "6f94c381",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "f6c50212",
+   "id": "20a46e5d",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "995cb966",
+   "id": "36418579",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "1657321c",
+   "id": "a5b67844",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "c49a44f7",
+   "id": "427fed36",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "1d6000e8",
+   "id": "64ce7267",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "250dae80",
+   "id": "899a72bb",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "a5696c59",
+   "id": "21036b28",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "084ae517",
+   "id": "a266693d",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "a6fcc189",
+   "id": "f115f34f",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "b12c28d2",
+   "id": "4dc07dc9",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "3b275228",
+   "id": "4fa74bac",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "71cc9fd2",
+   "id": "92f71334",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "00bb723e",
+   "id": "4b54060a",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "97104c03",
+   "id": "00c1c495",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "97988872",
+   "id": "fa8ce249",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "4d3fdde9",
+   "id": "95441f5b",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "76556ae6",
+   "id": "ed4f8840",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "f8e750b0",
+   "id": "6aead174",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "d63fcf5d",
+   "id": "ee8f2299",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "3d2b87a6",
+   "id": "ad66e131",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "38b12093",
+   "id": "c8c78343",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "2cdc2c85",
+   "id": "c1434fd2",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "8e85b53b",
+   "id": "8d8ea3c1",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "94156bb5",
+   "id": "ebe47518",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "0e2ff2c3",
+   "id": "ae36de74",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "27a07b21",
+   "id": "756bedfa",
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
    "source": [
     "num1 = input('Enter num1: ').strip()\n",
     "num2 = input('Enter num2: ').strip()\n",
-    "if num1 == int(num1) and num2 == int(num2):\n",
+    "num1 == int(num1) and num2 == int(num2):\n",
     "    print(f'{num} + {num2} = {int(num1) + int(num2)}')\n",
     "elif not num1.isdigit():\n",
     "    print(f'{num1} is not numeric')\n",
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdcdcf93",
+   "id": "28e44fa5",
    "metadata": {},
    "outputs": [],
    "source": []
