--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "5b1e630e",
+   "id": "2429c233",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "84ba23df",
+   "id": "6c1b6dba",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "636dc649",
+   "id": "1b23ddd3",
    "metadata": {},
    "outputs": [
     {
@@ -228,17 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "56c93100",
+   "execution_count": 84,
+   "id": "fbc0ffaf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please, enter some number: 55\n",
-      "please, enter some number: gg\n",
-      "gg is not numeric\n"
+      "please, enter some number: tt\n",
+      "please, enter some number: 66\n",
+      "tt is not numeric\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ce27c96",
+   "id": "cb7fd332",
    "metadata": {},
    "outputs": [],
    "source": []
