--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f8e25d0e",
+   "id": "fb5ab326",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "46791109",
+   "id": "dbf048e7",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "6f94c381",
+   "id": "3f77b88e",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "20a46e5d",
+   "id": "9cd3257a",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "36418579",
+   "id": "d479d79b",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "a5b67844",
+   "id": "50f40015",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "427fed36",
+   "id": "b38f470b",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "64ce7267",
+   "id": "eec2a07b",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "899a72bb",
+   "id": "97da3b28",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "21036b28",
+   "id": "3caa8ca0",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "a266693d",
+   "id": "8cfecee4",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "f115f34f",
+   "id": "efac6ff7",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "4dc07dc9",
+   "id": "969d4bd3",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "4fa74bac",
+   "id": "727c1b64",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "92f71334",
+   "id": "364229bb",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "4b54060a",
+   "id": "135314e6",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "00c1c495",
+   "id": "c4fa697b",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "fa8ce249",
+   "id": "2c7a9efa",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "95441f5b",
+   "id": "eadcfb9b",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "ed4f8840",
+   "id": "7dfdb10d",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "6aead174",
+   "id": "0b685d87",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "ee8f2299",
+   "id": "7110718b",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "ad66e131",
+   "id": "5fef9fc5",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "c8c78343",
+   "id": "e98b7b17",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "c1434fd2",
+   "id": "72d1fcf7",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "8d8ea3c1",
+   "id": "3321628a",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "ebe47518",
+   "id": "e3bd045a",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "ae36de74",
+   "id": "feb13d75",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "756bedfa",
+   "id": "6a887966",
    "metadata": {},
    "outputs": [
     {
@@ -960,9 +960,9 @@
    "source": [
     "num1 = input('Enter num1: ').strip()\n",
     "num2 = input('Enter num2: ').strip()\n",
-    "num1 == int(num1) and num2 == int(num2):\n",
+    "if num1 == int(num1) and num2 == int(num2):\n",
     "    print(f'{num} + {num2} = {int(num1) + int(num2)}')\n",
-    "elif not num1.isdigit():\n",
+    "if not num1.isdigit():\n",
     "    print(f'{num1} is not numeric')\n",
     "else:\n",
     "    print(f'{num2} is not numeric')\n"
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28e44fa5",
+   "id": "43647129",
    "metadata": {},
    "outputs": [],
    "source": []
