--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f9998beb",
+   "id": "21a0ca8d",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "96afeb19",
+   "id": "13f8f580",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "622a35a6",
+   "id": "585477dc",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "81334cfd",
+   "id": "263007ee",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "841dce52",
+   "id": "d3a501f1",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "531a7c9c",
+   "id": "097242dc",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "3209c3c8",
+   "id": "35bdd653",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "b069a45e",
+   "id": "cf4ad08f",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "d959f4bf",
+   "id": "84cb6ce0",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "e77563b7",
+   "id": "f83c05d9",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "0cf89fcf",
+   "id": "871d0d43",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "a9f3e378",
+   "id": "c5b92d61",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "18d616c7",
+   "id": "2b243c55",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "6709440a",
+   "id": "4fce51f2",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "740cb21c",
+   "id": "2b5c88ac",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "1e5c1c98",
+   "id": "ffcec185",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "0479c4ad",
+   "id": "977326e6",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "7ef45de7",
+   "id": "76fb0da5",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "53a14b76",
+   "id": "69441f75",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "535c3500",
+   "id": "b128fd1d",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "4da6e1e4",
+   "id": "9493a257",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "c8fb364d",
+   "id": "1e98f10c",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "f382cc36",
+   "id": "c3b8e299",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "3a5889b1",
+   "id": "a6b1fbdf",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "950867b6",
+   "id": "bd36a92b",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "498bc858",
+   "id": "a886a8d6",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "fa940f63",
+   "id": "f1f00071",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "83674fa2",
+   "id": "93a99edb",
    "metadata": {},
    "outputs": [
     {
@@ -933,10 +933,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3413fc21",
+   "execution_count": 178,
+   "id": "22909ee6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter num1: 123\n",
+      "Enter num2: 10\n",
+      "123 + 10 = 133\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = input('Enter num1: ').strip()\n",
     "num2 = input('Enter num2: ').strip()\n",
@@ -945,14 +955,15 @@
     "elif not num2.isdigit():\n",
     "    print(f'{num2} is not numeric')\n",
     "else:\n",
-    "    print(f'{num1} + {num2} = {num1 + num2}')\n",
+    "    result = int(num1) + int(num2)\n",
+    "    print(f'{num1} + {num2} = {}')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "024685dc",
+   "id": "a7f4144f",
    "metadata": {},
    "outputs": [],
    "source": []
